<resources>
    <string name="app_name">Farmer Store</string>
    <string name="minimum_password">minimum_password</string>
    <string name="auth_failed">auth_failed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">หน้าหลัก</string>
    <string name="title_preorder">สินค้าสั่งจอง</string>
    <string name="title_order">ตะกร้าสินค้า</string>
    <string name="title_profile">ผู้ใช้งาน</string>
    <string name="title_market">สินค้าตลาด</string>
    <string name="btnP">Pre-Order</string>
    <string name="btnM">Market</string>
    <string name="register_empty_warning">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="register_name_warning">กรุณากรอกชื่อให้ถูกต้อง</string>
    <string name="register_phone_warning">กรุณากรอกเบอร์โทรศัพท์ให้ถูกต้อง</string>
    <string name="register_password_warning">กรุณาตั้งรหัสผ่านมากกว่า 6 ตัวอักษร</string>
    <string name="click_to_add_image">เปลี่ยนรูปภาพ</string>
    <string name="login_password">กรุณาใส่รหัสผ่าน</string>
    <string name="login_email">กรุณาใส่อีเมล</string>
    <string name="recommend_fruit">ผลไม้แนะนำ</string>
    <string name="allfruit">ผลไม้ทั้งหมด</string>
    <string name="savechat">ได้รับสินค้าเรียบร้อย</string>
    <string name="delchat">ยกเลิกการซื้อสินค้า</string>
    <string name="showchat">กดฉันหน่อย</string>
    <string name="asktologin">มีบัญชีผู้ใช้แล้ว เข้าสู่ระบบ?</string>
    <string name="aboutus">เกี่ยวกับเรา</string>

    <string name="profile_editProfile">แก้ไขรายละเอียดผู้ใช้</string>
    <string name="profile_logout">ออกจากระบบ</string>
    <string name="profile_sellerSetting">ตั้งค่าผู้ขาย</string>
    <string name="profile_buyerSetting">ตั้งค่าผู้ซื้อ</string>
    <string name="profile_email">อีเมล</string>
    <string name="profile_password">รหัสผ่าน</string>
    <string name="profile_fullname">ชื่อ-นามสกุล</string>
    <string name="profile_address">ที่อยู่</string>
    <string name="profile_phone">โทรศัพท์</string>
    <string name="profile_editimg">แก้ไขรูปภาพ</string>
    <string name="profile_edit">แก้ไขข้อมูล</string>
    <string name="profile_addproduct">เพิ่มสินค้า</string>
    <string name="edit">แก้ไข</string>
    <string name="profile_editproduct">แก้ไขสินค้า</string>
    <string name="date">วัน</string>
    <string name="month">เดือน</string>
    <string name="year">ปี</string>
    <string name="price">ราคา</string>
    <string name="quantity">จำนวน</string>
    <string name="product_image">รูปสินค้า</string>
    <string name="choosefruitname">เลือกชื่อผลไม้</string>
    <string name="baht">บาท</string>
    <string name="per">ต่อ</string>
    <string name="profile_productname">ชื่อเพิ่มเติม</string>
    <string name="datetosend">วันที่จัดส่งสินค้า</string>
    <string name="deleteproduct">ลบสินค้า</string>
    <string name="confirm">ยืนยัน</string>
    <string name="savedata">บันทึกข้อมูล</string>
    <string name="farmname">ชื่อฟาร์ม</string>
    <string name="farmdescription">รายละเอียดฟาร์ม</string>
    <string name="farmerid">หมายเลขบัตรประชน</string>
    <string name="editproduct">เพิ่ม/แก้ไขสินค้า</string>
    <string name="editfarm">แก้ไขรายละเอียดฟาร์ม</string>
    <string name="loginfailed">อีเมลหรือรหัสผ่านไม่ถูกต้อง</string>
    <string name="error_tryagain">มีข้อผิดพลาดเกิดขึ้น กรุณาลองใหม่อีกครั้ง</string>
    <string name="justamoment">กรุณารอสักครู่</string>
    <string name="productdes">ข้อมูลสินค้า</string>
    <string name="buyhistory">ประวัติการซื้อ</string>
    <string name="markethistory">ประวัติสินค้าตลาด</string>
    <string name="preorderhistory">ประวัติสินค้าสั่งจอง</string>
    <string name="clickbacktwice">"กดปุ่มกลับอีกครั้งเพื่อออกจากแอปพลิเคชัน"</string>
    <string name="send">ส่ง</string>

    <string name="preorder">สินค้าสั่งจอง</string>
    <string name="pre_daylist">รายการสินค้าสั่งจอง</string>

    <string name="by">Developer\n\nPSK | VNW | ATK | ARD \n ITE19 KMITL</string>
    <string name="credit">Credit</string>
    <string name="Credits">\n
        \"Dragon Fruit\" by AB, from \nthenounproject.com\n
        \"Durian\" by Icons Producer, from \nthenounproject.com\n
        \"Grapes\" by Vladimir Belochkin, from \nthenounproject.com\n
        \"Grapes\" by Artem Kovyazin, from \nthenounproject.com\n
        \"Lychee\" by Icons Producer, from \nthenounproject.com\n
        \"Mango\" by A. Stone, from \nthenounproject.com\n
        \"Mangosteen\" by Alena Artemova, from \nthenounproject.com\n
        \"Orange\" by Rakhmat Setiawan, from \nthenounproject.com\n
        \"Pineapple\" by Icons Producer, from \nthenounproject.com\n
        \"Rambutan\" by Maria Zamchy, from \nthenounproject.com\n
        \"Watermelon\" by AFY Studio, from \nthenounproject.com\n\nillustrated by Jang</string>
</resources>
