<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingLeft="60dp">

    <TextView
        android:id="@+id/txtFarmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/farmname"/>
    <EditText
        android:id="@+id/editFarmName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:hint="@string/farmname"
        android:maxLines="1"
        tools:text="@tools:sample/cities" />
    <TextView
        android:id="@+id/txtFarmDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/farmdescription"/>
    <EditText
        android:id="@+id/editFarmDes"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:hint="@string/farmdescription"
        android:maxLines="2"
        tools:text="@tools:sample/date/day_of_week" />

    <TextView
        android:id="@+id/txtFarmNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/farmerid"/>
    <TextView
        android:id="@+id/farmerNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        android:text="@string/farmerid"/>

</LinearLayout>