<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25sp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtfRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="Farm Register"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextFarmName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:includeFontPadding="false"
        android:inputType="textShortMessage"
        android:hint="@string/farmname"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@+id/txtfRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextFarmDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:includeFontPadding="false"
        android:inputType="textShortMessage"
        android:hint="@string/farmdescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextFarmName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextFarmNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:includeFontPadding="false"
        android:inputType="number"
        android:hint="@string/farmerid"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/editTextFarmDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextFarmAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:includeFontPadding="false"
        android:inputType="textShortMessage"
        android:hint="@string/profile_address"
        android:maxLines="4"
        app:layout_constraintTop_toBottomOf="@+id/editTextFarmNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_farmRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ลงทะเบียน"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextFarmAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>