<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:paddingLeft="10dp"
    android:paddingTop="30dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/editlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="45dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:textSize="18sp"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textEmail"
                android:layout_marginTop="10dp"
                android:text="@string/profile_password"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:text="Password"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="10dp"
            android:paddingLeft="45dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_fullname"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text3"
                android:textSize="19sp"
                tools:text="@tools:sample/full_names" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="3dp"
            android:paddingLeft="45dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_phone"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:textSize="19sp"
                tools:text="@tools:sample/us_phones" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="45dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text5"
                android:textSize="19sp"
                tools:text="@tools:sample/cities" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>