<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/sellcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="0dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imgSeller"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toTopOf="@+id/farmName"
            tools:srcCompat="@tools:sample/avatars[11]" />

        <TextView
            android:id="@+id/farmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Farm Name"
            android:textSize="22dp"
            app:layout_constraintBottom_toTopOf="@+id/farmDes"
            app:layout_constraintTop_toBottomOf="@+id/imgSeller" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/farmDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:text="Farm Description \nmore..."
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/editFarm"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:includeFontPadding="false"
                android:background="@drawable/button_gen"
                android:text="@string/edit"
                android:textColor="@color/gen_white"
                android:textSize="10dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/preorderProduct"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/preorder"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/addProduct"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_add_circle_black_24dp"
            android:drawablePadding="15dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/profile_addproduct"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/list_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp" />
    </LinearLayout>
</ScrollView>
